examples/test/testpolicy18363.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18363
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key14: value34
      key33: value10
      key35: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value27
      podSelector:
        matchLabels:
          key25: value17
          key46: value45
          key5: value39
